if (BUILD_TESTING)
	enable_testing ()

	if (APPLE OR UNIX)
		set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -ansi -pedantic -fdiagnostics-color=always")
		set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g3 -O0")
		set (CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast")
		set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -pedantic -fdiagnostics-color=always")
		set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3 -O0")
		set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g0 -Ofast")
	endif ()

	add_executable (test-clist test-basic.c test-multi.c)
	target_link_libraries (test-clist autotest)
	add_test (NAME clist-test COMMAND "$<TARGET_FILE:test-clist>")

	# not added as a test but only built if testing is enabled.
	add_executable (clist-benchmark benchmark-clist.cc)
	target_link_libraries (clist-benchmark benchmark)
	if (MSVC)
		target_link_libraries (clist-benchmark shlwapi)
	else ()
		target_link_libraries (clist-benchmark pthread)
	endif ()
endif ()
